<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorAccent"
    android:gravity="center"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/my_widget_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/appwidget_text"
        android:text="@string/nutella_pie"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/my_widget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingStart="8dp"
        android:textColor="@android:color/black"
        android:paddingEnd="8dp"
        android:text="@string/ingredients_list"
        android:textSize="14sp"
        android:textStyle="bold|italic"
        android:visibility="visible" />

</LinearLayout>